Added test files for GuestGUI and UserGUI